Fix node images not showing

--- a/gemex-cms/static/scss/page/map.scss
+++ b/gemex-cms/static/scss/page/map.scss
@@ -47,6 +47,7 @@ img.map-overlay.show {
 	}
 }
 
+img.map-overlay,
 img.map-background,
 .litetooltip-hotspot-wrapper {
 	width:     100% !important;
